k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wotlwedu-minimal
  labels:
    app: wotlwedu-minimal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wotlwedu-minimal
  template:
    metadata:
      labels:
        app: wotlwedu-minimal
    spec:
      containers:
        - name: wotlwedu-minimal
          image: ravelox/wotlwedu-minimal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: tls-certificates
              mountPath: /etc/wotlwedu/tls
              readOnly: true
      volumes:
        - name: tls-certificates
          secret:
            secretName: wotlwedu-minimal-tls
---
apiVersion: v1
kind: Service
metadata:
  name: wotlwedu-minimal
  labels:
    app: wotlwedu-minimal
spec:
  type: ClusterIP
  selector:
    app: wotlwedu-minimal
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
