k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wotlwedu-minimal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mobile.wotlwedu.com
      secretName: wotlwedu-minimal-tls
  rules:
    - host: mobile.wotlwedu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wotlwedu-minimal
                port:
                  number: 80
